// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Snapshots renders spinner when loading 1`] = `
<div>
  <button
    class="button button--primary-filled button--md button--loading"
  >
    <div
      class="spinner spinner--default spinner--md button__spinner"
    >
      <svg
        class="spinner__svg"
        fill="currentColor"
        height="20"
        viewBox="0 0 48 48"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="24"
          cy="4"
          r="4"
        />
        <circle
          cx="12.19"
          cy="7.86"
          r="3.7"
        />
        <circle
          cx="5.02"
          cy="17.68"
          r="3.4"
        />
        <circle
          cx="5.02"
          cy="30.32"
          r="3.1"
        />
        <circle
          cx="12.19"
          cy="40.14"
          r="2.8"
        />
        <circle
          cx="24"
          cy="44"
          r="2.5"
        />
        <circle
          cx="35.81"
          cy="40.14"
          r="2.2"
        />
        <circle
          cx="42.98"
          cy="30.32"
          r="1.9"
        />
        <circle
          cx="42.98"
          cy="17.68"
          r="1.6"
        />
        <circle
          cx="35.81"
          cy="7.86"
          r="1.3"
        />
      </svg>
    </div>
    <span
      class="button__text"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`Button Snapshots should applies disabled classes 1`] = `
<div>
  <button
    aria-disabled="true"
    class="button button--primary-filled button--md button--disabled"
    disabled=""
  >
    <span
      class="button__text"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`Button Snapshots should applies fullWidth classes 1`] = `
<div>
  <button
    class="button button--primary-filled button--md button--full-width"
  >
    <span
      class="button__text"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`Button Snapshots should applies icon-only classes 1`] = `
<div>
  <button
    class="button button--primary-filled button--md button--icon-only"
  >
    <span
      class="button__left"
    >
      <i
        class="fas fa-star"
      />
    </span>
    <span
      class="button__text"
    >
      Button
    </span>
    <span
      class="button__right"
    >
      <i
        class="fas fa-star"
      />
    </span>
  </button>
</div>
`;

exports[`Button Snapshots should applies pressed classes 1`] = `
<div>
  <button
    aria-pressed="true"
    class="button button--primary-filled button--md button--pressed"
  >
    <span
      class="button__text"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`Button Snapshots should apply 'critical' skin classes 1`] = `
<div>
  <button
    class="button button--critical-filled button--md"
  >
    <span
      class="button__text"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`Button Snapshots should apply 'filled' appearance classes 1`] = `
<div>
  <button
    class="button button--primary-filled button--md"
  >
    <span
      class="button__text"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`Button Snapshots should apply 'ghost' appearance classes 1`] = `
<div>
  <button
    class="button button--primary-ghost button--md"
  >
    <span
      class="button__text"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`Button Snapshots should apply 'lg' size classes 1`] = `
<div>
  <button
    class="button button--primary-filled button--lg"
  >
    <span
      class="button__text"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`Button Snapshots should apply 'md' size classes 1`] = `
<div>
  <button
    class="button button--primary-filled button--md"
  >
    <span
      class="button__text"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`Button Snapshots should apply 'neutral' skin classes 1`] = `
<div>
  <button
    class="button button--neutral-filled button--md"
  >
    <span
      class="button__text"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`Button Snapshots should apply 'outline' appearance classes 1`] = `
<div>
  <button
    class="button button--primary-outline button--md"
  >
    <span
      class="button__text"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`Button Snapshots should apply 'primary' skin classes 1`] = `
<div>
  <button
    class="button button--primary-filled button--md"
  >
    <span
      class="button__text"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`Button Snapshots should apply 'secondary' skin classes 1`] = `
<div>
  <button
    class="button button--secondary-filled button--md"
  >
    <span
      class="button__text"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`Button Snapshots should apply 'sm' size classes 1`] = `
<div>
  <button
    class="button button--primary-filled button--sm"
  >
    <span
      class="button__text"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`Button Snapshots should apply 'success' skin classes 1`] = `
<div>
  <button
    class="button button--success-filled button--md"
  >
    <span
      class="button__text"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`Button Snapshots should apply 'xl' size classes 1`] = `
<div>
  <button
    class="button button--primary-filled button--xl"
  >
    <span
      class="button__text"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`Button Snapshots should apply 'xs' size classes 1`] = `
<div>
  <button
    class="button button--primary-filled button--xs"
  >
    <span
      class="button__text"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`Button Snapshots should render additional classes 1`] = `
<div>
  <button
    class="button button--primary-filled button--md other-class"
  >
    <span
      class="button__text"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`Button Snapshots should render left slot content 1`] = `
<div>
  <button
    class="button button--primary-filled button--md"
  >
    <span
      class="button__left"
    >
      Left slot
    </span>
    <span
      class="button__text"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`Button Snapshots should render right slot content 1`] = `
<div>
  <button
    class="button button--primary-filled button--md"
  >
    <span
      class="button__text"
    >
      Button
    </span>
    <span
      class="button__right"
    >
      Right slot
    </span>
  </button>
</div>
`;

exports[`Button Snapshots should renders component as anchor 1`] = `
<div>
  <a
    class="button button--primary-filled button--md"
    href="#"
  >
    <span
      class="button__text"
    >
      Button
    </span>
  </a>
</div>
`;

exports[`Button Snapshots should renders default component 1`] = `
<div>
  <button
    class="button button--primary-filled button--md"
  >
    <span
      class="button__text"
    >
      Button
    </span>
  </button>
</div>
`;
